Weird jump scroll in calendar.css fix
So my best guess as to why this was happening is css didn't appreciate having two things as absolute on the same z-index. Couldn't tell you specifics but position:fixed sorted it right out.

--- a/website/templates/css/calendar.css
+++ b/website/templates/css/calendar.css
@@ -47,6 +47,7 @@
 
 .baseContent {
     background-color: var(--indigo-dye);
+    overflow-y: hidden;
 }
 
 /* Background Video */
@@ -385,7 +386,7 @@
 #screensaver {
     width: 100%;
     /* height: 100%; */
-    position: absolute;
+    position: fixed;
     left: 0px;
     /* top: 0px; */
     /* Bottom is to test it out for now, 
